[gd_scene load_steps=4 format=2]

[ext_resource path="res://CameraScript.gd" type="Script" id=1]
[ext_resource path="res://ControlScript.gd" type="Script" id=2]
[ext_resource path="res://UIScript.gd" type="Script" id=3]

[node name="Spatial" type="Spatial"]

[node name="CameraBody" type="KinematicBody" parent="."]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="CameraBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.11421, 1.09392, 0.691177 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="UI" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Control/UI"]
margin_top = 120.0
margin_right = 360.0
margin_bottom = 1080.0

[node name="Title" type="RichTextLabel" parent="Control/UI"]
margin_left = 11.0
margin_top = 138.0
margin_right = 182.0
margin_bottom = 171.0
rect_scale = Vector2( 2, 2 )
text = "Object editor and inspector"

[node name="Velocity" type="RichTextLabel" parent="Control/UI"]
margin_left = 9.0
margin_top = 210.0
margin_right = 244.0
margin_bottom = 337.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Current velocity:"

[node name="VxSlide" type="HSlider" parent="Control/UI/Velocity"]
margin_left = 60.0
margin_top = 15.0
margin_right = 230.0
margin_bottom = 49.0
min_value = -25.0
max_value = 25.0
step = 0.01

[node name="VySlide" type="HSlider" parent="Control/UI/Velocity"]
margin_left = 60.0
margin_top = 35.0
margin_right = 230.0
margin_bottom = 69.0
min_value = -25.0
max_value = 25.0
step = 0.01

[node name="VzSlide" type="HSlider" parent="Control/UI/Velocity"]
margin_left = 60.0
margin_top = 55.0
margin_right = 230.0
margin_bottom = 89.0
min_value = -25.0
max_value = 25.0
step = 0.01

[node name="Vx" type="RichTextLabel" parent="Control/UI/Velocity"]
margin_top = 23.0
margin_right = 65.0
margin_bottom = 40.0
text = "v.x:"

[node name="Vy" type="RichTextLabel" parent="Control/UI/Velocity"]
margin_top = 43.0
margin_right = 65.0
margin_bottom = 60.0
text = "v.y:"

[node name="Vz" type="RichTextLabel" parent="Control/UI/Velocity"]
margin_top = 63.0
margin_right = 67.0
margin_bottom = 79.0
text = "v.z:"

[node name="VSet" type="Button" parent="Control/UI/Velocity"]
margin_left = 17.0
margin_top = 87.0
margin_right = 167.0
margin_bottom = 117.0
text = "Set new velocity"

[node name="Acceleration" type="RichTextLabel" parent="Control/UI"]
margin_left = 9.0
margin_top = 403.0
margin_right = 244.0
margin_bottom = 530.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Current acceleration:"

[node name="AxSlide" type="HSlider" parent="Control/UI/Acceleration"]
margin_left = 60.0
margin_top = 15.0
margin_right = 230.0
margin_bottom = 49.0
min_value = -25.0
max_value = 25.0
step = 0.01

[node name="AySlide" type="HSlider" parent="Control/UI/Acceleration"]
margin_left = 60.0
margin_top = 35.0
margin_right = 230.0
margin_bottom = 69.0
min_value = -25.0
max_value = 25.0
step = 0.01

[node name="AzSlide" type="HSlider" parent="Control/UI/Acceleration"]
margin_left = 60.0
margin_top = 55.0
margin_right = 230.0
margin_bottom = 89.0
min_value = -25.0
max_value = 25.0
step = 0.01

[node name="Ax" type="RichTextLabel" parent="Control/UI/Acceleration"]
margin_top = 23.0
margin_right = 65.0
margin_bottom = 40.0
text = "a.x:"

[node name="Ay" type="RichTextLabel" parent="Control/UI/Acceleration"]
margin_top = 43.0
margin_right = 65.0
margin_bottom = 60.0
text = "a.y:"

[node name="Az" type="RichTextLabel" parent="Control/UI/Acceleration"]
margin_top = 63.0
margin_right = 67.0
margin_bottom = 79.0
text = "a.z:"

[node name="ASet" type="Button" parent="Control/UI/Acceleration"]
margin_left = 17.0
margin_top = 87.0
margin_right = 167.0
margin_bottom = 117.0
text = "Set new acceleration"

[node name="Mass" type="RichTextLabel" parent="Control/UI"]
margin_left = 9.0
margin_top = 619.0
margin_right = 244.0
margin_bottom = 746.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Current mass:"

[node name="MSlide" type="HSlider" parent="Control/UI/Mass"]
margin_left = 60.0
margin_top = 15.0
margin_right = 230.0
margin_bottom = 49.0
min_value = 0.01
max_value = 40.0
step = 0.01
value = 0.01

[node name="MVal" type="RichTextLabel" parent="Control/UI/Mass"]
margin_top = 23.0
margin_right = 65.0
margin_bottom = 40.0
text = "m:"

[node name="MSet" type="Button" parent="Control/UI/Mass"]
margin_left = 17.0
margin_top = 47.0
margin_right = 167.0
margin_bottom = 77.0
text = "Set new mass"

[node name="Radius" type="RichTextLabel" parent="Control/UI"]
margin_left = 5.0
margin_top = 758.0
margin_right = 240.0
margin_bottom = 885.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Current radius:"

[node name="RSlide" type="HSlider" parent="Control/UI/Radius"]
margin_left = 60.0
margin_top = 15.0
margin_right = 230.0
margin_bottom = 49.0
min_value = 0.5
max_value = 10.0
step = 0.01
value = 0.5

[node name="RVal" type="RichTextLabel" parent="Control/UI/Radius"]
margin_top = 23.0
margin_right = 65.0
margin_bottom = 40.0
text = "r:"

[node name="RSet" type="Button" parent="Control/UI/Radius"]
margin_left = 17.0
margin_top = 47.0
margin_right = 167.0
margin_bottom = 77.0
text = "Set new radius"

[connection signal="pressed" from="Control/UI/Velocity/VSet" to="Control/UI" method="_on_VSet_pressed"]
[connection signal="pressed" from="Control/UI/Acceleration/ASet" to="Control/UI" method="_on_ASet_pressed"]
[connection signal="pressed" from="Control/UI/Mass/MSet" to="Control/UI" method="_on_MSet_pressed"]
[connection signal="pressed" from="Control/UI/Radius/RSet" to="Control/UI" method="_on_RSet_pressed"]
